<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/profile_bg"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="16:9" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" android:scaleType="centerCrop"/>
    <ImageView
            android:layout_width="@dimen/avatar_round_size"
            android:layout_height="@dimen/avatar_round_size"
            app:srcCompat="@drawable/avatar_default"
            android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@+id/imageView"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView" app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.358"/>
    <ImageButton
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40" app:srcCompat="@drawable/ic_edit_black_24dp"
            android:id="@+id/imageButton"
            android:background="@drawable/btn_round_bg"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="@+id/imageView2"/>
    <ImageButton
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40" app:srcCompat="@drawable/ic_switch_day_night"
            android:id="@+id/imageButton2"
            android:background="@drawable/btn_round_bg" app:layout_constraintEnd_toStartOf="@+id/imageView2"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"/>
    <TextView
            android:text="Jon Doe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" style="@style/Profile.Header.Nickname"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2" app:layout_constraintStart_toStartOf="@+id/imageView2"/>
    <TextView
            android:text="Junior Android Developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" style="@style/Profile.Header.Rank"
            app:layout_constraintEnd_toEndOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <View
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:id="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:background="@color/color_primary_light"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/imageView4"/>
    <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:id="@+id/view2" app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/view" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="@+id/view" android:layout_marginBottom="16dp"
            android:background="@color/color_divider_light"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" style="@style/Profile.Metrics.Value"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/view2"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/view"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" style="@style/Profile.Metrics.Value"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/view2"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/view"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView6" app:layout_constraintHorizontal_bias="0.505"/>
    <TextView
            android:text="@string/profile_label_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" style="@style/Profile.Metrics.Label"
            app:layout_constraintEnd_toEndOf="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/profile_label_respect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" style="@style/Profile.Metrics.Label"
            app:layout_constraintStart_toStartOf="@+id/textView4" app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40" app:srcCompat="@drawable/ic_avatar"
            android:id="@+id/imageView4" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/view" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imageView4" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView4" android:layout_marginEnd="16dp"
            android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_first_name" tools:text="Joe" style="@style/Profile.EditText.Single"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/imageView4" android:layout_marginStart="8dp"
            android:id="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_last_name" tools:text="Doe" style="@style/Profile.EditText.Single"/>
    </com.google.android.material.textfield.TextInputLayout>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:id="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp" android:background="@color/color_divider_dark"/>
    <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40" app:srcCompat="@drawable/ic_about"
            android:id="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/divider"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_width="0dp" app:layout_constraintStart_toEndOf="@+id/imageView5"
            android:layout_marginStart="8dp" android:id="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_about" style="@style/Profile.EditText.MultiLine"
                tools:text="Something"/>
    </com.google.android.material.textfield.TextInputLayout>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:id="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            android:background="@color/color_divider_dark" android:layout_marginTop="5dp"/>
    <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40" app:srcCompat="@drawable/ic_repo"
            android:id="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/divider2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imageView6" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView6" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout4" android:layout_marginEnd="32dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_repository" style="@style/Profile.EditText.Single"
                tools:text="https://github.com"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_eye_24dp"
            android:id="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textInputLayout4"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout4"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout4" android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>